--- a/src/app/mes-activites/mes-activites.component.html
+++ b/src/app/mes-activites/mes-activites.component.html
@@ -1,1 +1,115 @@
-<p>mes-activites works!</p>
+<!-- <p>mes-activites works!</p> -->
+
+
+<nav class="navbar navbar-light bg-light ">
+    <div class="container-fluid">
+        <a href="" [routerLink]="['/compte/id']"></a>
+            <i class="bi bi-arrow-left" style=";"></i>
+        
+        <i class="bi bi-list"></i>
+    </div>
+</nav>
+
+<button type="button" class="btn btn-primary btn-lg" (click)= "displayActive(true)">A venir</button>
+<button type="button" class="btn btn-secondary btn-lg" (click)= "displayActive(false)">Passées</button>
+
+<div class="Actived" *ngIf="Active">
+    <div *ngFor="let activity of activeActivities">
+        <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">dazdazd</h5>
+                <p class="card-text">dazdazd</p>
+                <a href="#" class="btn btn-primary">Voir</a>
+            </div>
+        </div>
+
+
+<i class="bi bi-eye-fill" ></i>
+
+<!-- *ngFor -->
+        <div class="card" style="width: 18rem;">    
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">zdazd</h5>
+                <p class="card-text">dazda</p>
+                <a href="#" class="btn btn-primary">Voir</a>
+            </div>
+        </div>
+
+<i class="bi bi-eye-fill"></i>
+
+        <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">dazd</h5>
+                <p class="card-text">dazd</p>
+                <a href="#" class="btn btn-primary">Voir</a>
+            </div>
+        </div>
+</div>
+
+<i class="bi bi-eye-fill" ></i>
+
+
+
+<div class="passed" *ngIf="!Active" >
+    <div *ngFor="let activity of previousActivities">
+        <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">da</h5>
+                <p class="card-text">dazd</p>
+                <a href="#" class="btn btn-primary">Voir</a>
+            </div>
+        </div>
+    
+    <i class="bi bi-eye-fill" ></i>
+    
+    <!-- *ngFor -->
+        <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title"></h5>
+                <p class="card-text"></p>
+                <a href="#" class="btn btn-primary">Voir</a>
+            </div>
+        </div>
+    
+    <i class="bi bi-eye-fill"   ></i>
+    
+    
+        <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">azdaz</h5>
+                <p class="card-text">dddazd</p>
+                <a href="#" class="btn btn-primary">Voir</a>
+            </div>
+        </div>
+    </div>
+</div>
+    
+    <i class="bi bi-eye-fill" ></i>
+
+<div class="container my-5">
+
+    <footer class="bg-dark text-center text-white">
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+        <!-- Section: Social media -->
+        <section class="mb-1">
+        
+        </section>
+        <!-- Section: Social media -->
+    </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2020 Copyright:
+        <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+    </div>
+    <!-- Copyright -->
+    </footer>
+    
