--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -1,8 +1,3 @@
-#fondecran {
-    width: 100%;
- height: auto;
-}
-
 .form-control {
     width: 30%;
     margin-left: 30%;
@@ -12,7 +7,15 @@
     margin-left: 30%;
 }
 
+.name {
+    margin-left: 30%;
+}
 
+.form-select {
+    margin-bottom: 2%;
+    width: 40%;
+    margin-left: 41%;
+}
 
 body {
     height: 100vh; 
@@ -22,6 +25,3 @@ body {
     min-width: 100%;
     min-height: 100%;
 }
-
-
-
