--- a/src/app/compte/compte.component.css
+++ b/src/app/compte/compte.component.css
@@ -1,51 +1,65 @@
-header{
-    background: url(/assets/img/wallpaper.jpg) no-repeat center / cover; 
+*{
+    box-sizing: border-box;
+}
+/* header{
+    background: url(../../assets/img/wallpaper.jpg) no-repeat center / cover; 
     max-height: 15%;
-}
-#inputgroup{
-    border-radius: 100%; 
-    margin: 10%; 
-    height: 80%; 
-    max-height: 200px;
-}
+} */
+/* #inputgroup{ */
+    /* border-radius: 100%;  */
+    /* margin: 10%;  */
+    /* height: 80%;  */
+    /* max-height: 200px; */
+/* } */
 #imgprofil{
     border-radius: 100%; 
-    margin: 10%; 
-    height: 80%; 
-    max-height: 200px;
+    margin-top: 10%; 
+    margin-left: 0;
+    /* height: 80%;  */
+    max-height: 6rem;
 }
 #boutons{
     padding: 5px;
 }
-.form-control{
-    font-size: 2rem;
-}
+/* .form-control{
+    font-size: 1.5rem;
+} */
 .bi-person-circle{
-    font-size: 2rem; 
+    font-size: 1.5rem; 
     color: rgb(255, 0, 234);
 }
 .bi-geo{
-    font-size: 2rem; 
+    font-size: 1.5rem; 
     color: orange; 
-    transform:rotate(-15deg);
+    /* transform:rotate(-15deg); */
 }
-#btn-modif{
-    margin-left: 80%; 
+#div-modif{
+    margin-right: 0; 
     position: relative; 
-    bottom: 10px;
-    font-size: 1rem;
-    padding: 1;
-    height: 20px;
-    width: 20px;
-    border-radius: 30%;
+    /* bottom: 5px; */
+    /* font-size: 1rem; */
+    /* height: 1rem;*/
+    width: 1.3em; 
+    /* border-radius: 70%; */
+    padding:0;
 }
-.icon-modif{
+#btn_modif{
+    /* margin-left: 80%; 
+    position: relative; 
+    bottom: 10px; */
+    font-size: 1rem;
+    /* margin-right: 55px; */
+    /* height: 20px;
+    width: 20px; */
+    
+}
+/* .icon-modif{
     margin: 0;
     font-size: 1rem;
     position: relative;
     margin-left: -7px; 
     bottom: 10px;
-}
+} */
 .icon-activity{
     font-size: 2rem;
 }
