--- a/src/app/compte/compte.component.html
+++ b/src/app/compte/compte.component.html
@@ -1,30 +1,31 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><i class="bi bi-arrow-left-circle" style="font-weight:bolder;"></i></a>
+        <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+            <i class="bi bi-x"></i>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <form class="d-flex">
             <button class="btn btn-outline-success m-2" type="submit" [routerLink]="['/login']">Connexion</button>
             <button class="btn btn-outline-success m-2" type="submit" [routerLink]="['/login']">Inscription</button>
         </form>
-        </div>
+        </div> -->
     </div>
 </nav>
 
-<header  class="container-fluid">
+<header  class="container-fluid" [style.background]="'url(../../assets/img/'+ useravat + ')'">
+
     <div class="container d-flex">
         <div class="row">
-            <div class="col container-fluid">
-                <img src="{{imgprofil}}" id="imgprofil" alt="image de profil">
+            <div class="col-3 container">
+                <img src="../../assets/img/{{user ? user.avatar : ''}}" id="imgprofil" alt="image de profil">
             </div>
-            <div class="col" id="inputgroup">
+            <div class="col-7" id="inputgroup">
                 <div class="input-group">
                     <div class="input-group-text bg-transparent border-0">
                         <i class="bi bi-person-circle"></i>
                     </div>
-                    <input type="text" class="form-control" placeholder="{{user ? user.name: ''}}">
+                    <input type="text" class="form-control user bg-transparent border-0 text-white" value="{{user ? user.name: ''}}" readonly>
                 </div>
                 <!-- <div style="margin: 15%;">
                     <input type="text" placeholder="{{user ? user.name: ''}}" readonly>
@@ -33,24 +34,26 @@
                     <div class="input-group-text bg-transparent border-0">
                         <i class="bi bi-geo"></i>
                     </div>
-                    <input type="text" class="form-control textarea-autosize" placeholder="{{user ? user.region: ''}}">
+                    <input type="text" class="form-control user textarea-autosize bg-transparent border-0 text-white" value="{{user ? user.region: ''}}"  readonly>
                 </div>
-                <!-- <div style="margin: 15%;">
-                    <input type="text" placeholder="{{user ? user.region: ''}}" readonly>
-                </div> -->
-                <button class="btn btn-success" id="btn-modif">
-                    <i class="bi bi-pencil-square icon-modif"></i>
-                </button>
+
+                
             </div>
             
         </div>
+        <div id="div-modif">
+            <button class="btn btn-danger">
+                <i class="bi bi-pencil-square" id="btn_modif"></i>
+            </button>
+        </div>
     </div>
+    
 </header>
 
 
 
 <div id="boutons">
-
+<!-- <button *ngFor="let logoActivity of Users"></button> -->
     <button class="btn btn-light btn-activity"><i class="bi bi-tsunami icon-activity"></i></button>
     <button class="btn btn-light btn-activity"><i class="bi bi-wrench icon-activity"></i></button>
     <button class="btn btn-light btn-activity"><i class="bi bi-wind icon-activity"></i></button>
@@ -67,7 +70,6 @@
     <button class="btn btn-light btn-activity"><i class="bi bi-camera icon-activity"></i></button>
     <button class="btn btn-light btn-activity"><i class="bi bi-boombox icon-activity"></i></button>
     <button class="btn btn-light btn-activity"><i class="bi bi-binoculars icon-activity"></i></button>
-
 </div>
 
 
@@ -88,6 +90,10 @@
 
     <button class="btn btn-outline-secondary btn-lg btn-menu" type="button" [routerLink]="['/contact/:userid']"> <i class="bi bi-patch-question"></i> Aides</button>
     <!-- routerLink Aides -->
+
+    <button class="btn btn-outline-secondary btn-lg btn-menu" type="button" [routerLink]="['']"> <i class="bi bi-power"></i> Se déconnecter </button>
+    <!-- routerLink Accueil -->
+
 </div>
 
 
