--- a/src/app/compte/compte.component.html
+++ b/src/app/compte/compte.component.html
@@ -54,6 +54,7 @@
 
 <div id="boutons">
 <!-- <button *ngFor="let logoActivity of Users"></button> -->
+{{user ? user.hobbies : ''}}
     <button class="btn btn-light btn-activity"><i class="bi bi-tsunami icon-activity"></i></button>
     <button class="btn btn-light btn-activity"><i class="bi bi-wrench icon-activity"></i></button>
     <button class="btn btn-light btn-activity"><i class="bi bi-wind icon-activity"></i></button>
