--- a/src/app/compte/compte.component.css
+++ b/src/app/compte/compte.component.css
@@ -1,20 +1,22 @@
-*{
+* {
     box-sizing: border-box;
 }
-header{
+header {
     /* background: url(../../assets/img/wallpaper.jpg) no-repeat center / cover;  */
-    min-height: 100px;
+    min-height: 110px;
+    
 }
-/* #inputgroup{ */
+.no-margin-right{ 
     /* border-radius: 100%;  */
     /* margin: 10%;  */
     /* height: 80%;  */
     /* max-height: 200px; */
-/* } */
+    padding-right: 0;
+}
 #imgprofil{
     border-radius: 100%; 
-    margin-top: 10%; 
-    margin-left: 0;
+    margin: 10%; 
+    /* margin-left: 0; */
     /* height: 80%;  */
     max-height: 6rem;
 }
@@ -34,14 +36,18 @@ header{
     /* transform:rotate(-15deg); */
 }
 #div-modif{
-    margin-right: 0; 
-    position: relative; 
+    /* margin-left: 0;  */
+    /* position: relative;  */
+    /* top: 0; */
     /* bottom: 5px; */
     /* font-size: 1rem; */
     /* height: 1rem;*/
     width: 1.3em; 
     /* border-radius: 70%; */
-    padding:0;
+    /* padding:0; */
+}
+.btn-danger{
+    padding: 0 5px;
 }
 #btn_modif{
     /* margin-left: 80%; 
@@ -51,7 +57,7 @@ header{
     /* margin-right: 55px; */
     /* height: 20px;
     width: 20px; */
-    
+   
 }
 /* .icon-modif{
     margin: 0;
@@ -100,7 +106,7 @@ header{
     font-size: 2.5rem;
     /* color:linear-gradient(green red) ; */
     background: -webkit-linear-gradient(rgb(43, 40, 238),orange, red,rgb(187, 11, 134),green);
-        -webkit-background-clip: text;
+        background-clip: text;
         -webkit-text-fill-color: transparent;
 }
 .fixe-bottom {
