--- a/src/app/compte/compte.component.html
+++ b/src/app/compte/compte.component.html
@@ -13,16 +13,16 @@
     </div>
 </nav>
 
-<header  class="container-fluid" [style.background]="'url(../../assets/img/'+ useravat + ')'">
+<header  class="container-fluid" [style.background]="'url(../../assets/img/'+ useravat + ')'" [style.backgroundSize]="'cover'">
 
     <div class="container d-flex">
-        <div class="row">
-            <div class="col-3 container">
+        <div class="row justify-content-around">
+            <div class="col-3 align-self-center container">
                 <img src="../../assets/img/{{user ? user.avatar : ''}}" id="imgprofil" alt="image de profil">
             </div>
-            <div class="col-7" id="inputgroup">
+            <div class="col-7 align-self-center" id="inputgroup">
                 <div class="input-group">
-                    <div class="input-group-text bg-transparent border-0">
+                    <div class="input-group-text bg-transparent border-0 no-margin-right">
                         <i class="bi bi-person-circle"></i>
                     </div>
                     <input type="text" class="form-control user bg-transparent border-0 text-white" value="{{user ? user.name: ''}}" readonly>
@@ -31,7 +31,7 @@
                     <input type="text" placeholder="{{user ? user.name: ''}}" readonly>
                 </div> -->
                 <div class="input-group">
-                    <div class="input-group-text bg-transparent border-0">
+                    <div class="input-group-text bg-transparent border-0 no-margin-right">
                         <i class="bi bi-geo"></i>
                     </div>
                     <input type="text" class="form-control user textarea-autosize bg-transparent border-0 text-white" value="{{user ? user.region: ''}}"  readonly>
@@ -39,22 +39,23 @@
 
                 
             </div>
-            
-        </div>
-        <div id="div-modif">
+            <div class="col-1 align-self-start" id="div-modif">
             <button class="btn btn-danger">
                 <i class="bi bi-pencil-square" id="btn_modif"></i>
             </button>
         </div>
+        </div>
+        
     </div>
     
 </header>
 
 
 
-<div id="boutons">
+<div id="boutons" class="d-flex justify-content-around flex-wrap">
 <!-- <button *ngFor="let logoActivity of Users"></button> -->
-{{user ? user.hobbies : ''}}
+<!-- {{user ? user.hobbies : ''}} -->
+
     <button class="btn btn-light btn-activity"><i class="bi bi-tsunami icon-activity"></i></button>
     <button class="btn btn-light btn-activity"><i class="bi bi-wrench icon-activity"></i></button>
     <button class="btn btn-light btn-activity"><i class="bi bi-wind icon-activity"></i></button>
