--- a/src/app/fil-dactu/fil-dactu.component.html
+++ b/src/app/fil-dactu/fil-dactu.component.html
@@ -1,1 +1,34 @@
-<p>fil-dactu works!</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><img src="../../assets/img/logo.png" alt="logo" id="logo"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" [routerLink]="['/compte/'+'{{user ? user.id : \'\'}}+']">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <form class="d-flex">
+          <button class="btn btn-outline-success m-2" type="submit" [routerLink]="['/login']">Connexion</button>
+          <button class="btn btn-outline-success m-2" type="submit" [routerLink]="['/login']">Inscription</button>
+        </form>
+      </div>
+    </div>
+</nav>
+
+
+
+<div>dsqdqs</div>
+
+<div>dsqdqs</div>
+
+<div>dsqdqs</div>
+
+<div>dsqdqs</div>
+
+<div>dsqdqs</div>
+
+<div>dsqdqs</div>
+
+<div>dsqdqs</div>
+
+<div class="fixe-bottom">
+    <img src="/assets/img/logo.png" alt="logo" id="footerimg">
+</div>
